Add camera controller and set a doorway collider + update the game terrain

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 [Mm]emoryCaptures/
 textures 1/
 Player/
+ADG_Textures/
+Cursors/
+Ground textures pack/
+Rocks and Boulders 2/
+Toby Fredson
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
