Update the scene game with new assets

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ Hovl Studio/
 skull_Shield/
 _TerrainAutoUpgrade/
 Handpainted Forest Environment/
+3DForge/
+
 
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
