fix Screen Event fade bug, add chest assets and update game scene

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,11 @@ Cursors/
 Ground textures pack/
 Rocks and Boulders 2/
 Toby Fredson/
-Water Shader/
+4. Item Loot/
 Hovl Studio/
 skull_Shield/
-_TerrainAutoUpgrade/
-Handpainted Forest Environment/
 3DForge/
+Rich_Monochrome_Nebulae_Local_Stars/
 
 
 
